--- a/laptrack/pubspec.yaml
+++ b/laptrack/pubspec.yaml
@@ -30,14 +30,20 @@ dependencies:
   flutter:
     sdk: flutter
 
+  mobx: ^2.0.7+4
+  flutter_mobx: ^2.0.6+1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.1.11
+  mobx_codegen: ^2.0.7
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
